@@ -1,7 +1,7 @@
 Package: robustbase
 Version: 0.92-6
 VersionNote: 0.92-5 on 2015-07-21 on CRAN
-Date: 2016-02-19
+Date: 2016-05-28
 Title: Basic Robust Statistics
 Author: Original code by many authors, notably
 	Peter Rousseeuw and Christophe Croux, see file 'Copyrights';
